# cleanMac

./: .env.signing.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/design/: 2026-05-31-cleanmac-rename-design.md  2026-05-31-settings-panel-design.md
scripts/: prepare-macos-icon.py
src/: App.tsx  globalScroll.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: app_identity.rs  commands.rs  dev_cache.rs  lib.rs  model.rs  permissions.rs  settings.rs  test_home.rs
src-tauri/src/delete/: mod.rs  ops_log.rs
src-tauri/src/scan/: app_caches.rs  applications.rs  dev_caches.rs  downloads.rs  duplicates.rs  file_types.rs  large_files.rs  logs.rs  mod.rs  trash.rs  walk.rs
src/components/: AnimatedBackground.module.css  AnimatedBackground.tsx  CacheImpactModal.tsx  CategoryCard.tsx  CategoryDetailView.tsx  DashboardHeader.tsx  DashboardToolbar.tsx  DashboardView.tsx  DeleteConfirmModal.tsx  DetailFooter.tsx  DetailItemList.tsx  DiskUsageCard.tsx  HomeSidebar.tsx  MacWindowTitleBar.tsx  PermissionBanner.tsx  PermissionModal.tsx  PrivacyBadgeCard.tsx  ScanConfirmModal.tsx  SettingsFieldRow.tsx  SettingsPanel.tsx
src/hooks/: useAppBootstrap.ts  useDetailView.ts  useDevtoolsShortcut.ts  useScanSession.ts
src/lib/: api.ts  appIdentity.ts  cacheImpactCopy.ts  categoryCardCopy.test.ts  categoryCardCopy.ts  categoryMeta.test.ts  categoryMeta.ts  cleanMacModalProps.ts  cleanMacTheme.ts  detailListRows.test.ts  detailListRows.ts  devFileTypeCache.ts  diskCleanerModalProps.ts  diskCleanerTheme.ts  diskUsage.ts  formatBytes.ts  groupScanItems.test.ts  groupScanItems.ts  homeTab.ts  layoutConstants.ts  permissionCopy.ts  permissionWarnings.test.ts  permissionWarnings.ts  (+7 more)
(+21 files in other folders)
