[package]
name = "cleanmac-desktop"
version = "0.1.3"
description = "CleanMac macOS 桌面客户端"
authors = ["canglang"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dev_cache"
path = "src/bin/dev_cache.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
libc = "0.2"
trash = "5"
rayon = "1.10"
blake3 = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
