[package]
name = "cleanmac-desktop"
version = "0.1.4"
description = "CleanMac macOS 桌面客户端"
authors = ["canglang"]
edition = "2021"
rust-version = "1.77.2"
default-run = "cleanmac-desktop"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
libc = "0.2"
trash = "5"
rayon = "1.10"
blake3 = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
